@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+ * Fixed a bug with GFF3 and Sequin Table export of GFF3
+   alternate_allele attributes.  Thanks to Jillian Rowe for pointing
+   this out (issue #256).
+
  * Fixed a bug in which running `biodb-to-json.pl` with no arguments
    caused it to crash instead of producing help output.  Thanks to
    GitHub user sreyesch for pointing this out (issue #257).
